Update swagger docs for event list
